2008-04-18 [paul]	0.19.0

	0.19 released

	* po/fi.po
	* po/it.po
	* po/pt_BR.po
		updated by Flammie Pirinen, Andrea Spadaccini and
		Frederico Goncalves Guimaraes

2008-04-18 [colin]	0.18.0cvs4

	* po/fr.po
		Update translation

2008-04-08 [colin]	0.18.0cvs3

	* src/feed.c
		Fix integer overflow in Curl response code

2008-04-01 [ticho]	0.18.0cvs2

	* src/feed.c
		Fix for items with zero-sized text.
	* src/parsers.c
		Fix handling of "rel" attribute of atom:link element.

2008-03-15 [colin]	0.18.0cvs1

	* src/feed.c
		Put the URL: html after <body>

2008-02-08 [paul]	0.18.0

	0.18 released

2008-02-08 [paul]	0.17.0cvs9

	* po/es.po
	* po/fi.po
	* po/hu.po
	* po/it.po
	* po/zh_CN.po
		updated by Ricardo Mones Lastra, Flammie Pirinen,
		Pader Rezso, Andrea Spadaccini and Ralph Young

2008-01-21 [ticho]	0.17.0cvs8

	* src/opml.c
		Use folder_create_folder() instead of klass->create_folder()
		so that we do not have to scan portion of the tree after the
		import.

2008-01-21 [colin]	0.17.0cvs7

	* src/feed.c
		Fix bug 1478, 'Wrong pthread_create calls all
		over the place'. Thanks to Christian Cornelssen

2008-01-20 [ticho]	0.17.0cvs6

	* src/feed.c
	* src/feed.h
	* src/opml.c
	* src/opml.h
	* src/rssyl.c
	* src/rssyl_cb_menu.c
	* src/rssyl_gtk.c
		Rewrote OPML import routine to allow importing feeds organized
		in folders and to allow feeds to be imported to a specific folder.
		Also, removed import preview, we now simply import found feeds.

2008-01-20 [colin]	0.17.0cvs5

	* src/opml.c
		Fix build :)

2008-01-19 [ticho]	0.17.0cvs4

	* src/Makefile.am
	* src/opml.c
	* src/opml.h
	* src/rssyl.c
		Export feeds to OPML on plugin init.

2008-01-16 [colin]	0.17.0cvs3

	* src/date.c
		Fix build on FreeBSD

2008-01-15 [colin]	0.17.0cvs2

	* src/date.c
		Fix bug 1461, 'several components #define 
		_XOPEN_SOURCE improperly'

2007-12-28 [colin]	0.17.0cvs1

	* src/feed.c
	* src/feed.h
	* src/rssyl_cb_menu.c
	* src/rssyl_cb_menu.h
	* src/rssyl_gtk.c
		Add OPML import.
