@@ -128,3 +128,4 @@
 ( cvs diff -u -r 1.1.2.93 -r 1.1.2.94 src/feed.c;  cvs diff -u -r 1.1.2.22 -r 1.1.2.23 src/parsers.c;  ) > 0.18.0cvs2.patchset
 ( cvs diff -u -r 1.1.2.94 -r 1.1.2.95 src/feed.c;  ) > 0.18.0cvs3.patchset
 ( cvs diff -u -r 1.1.2.8 -r 1.1.2.9 po/fr.po;  ) > 0.18.0cvs4.patchset
+( cvs diff -u -r 1.1.2.95 -r 1.1.2.96 src/feed.c;  cvs diff -u -r 1.1.2.21 -r 1.1.2.22 src/rssyl.c;  ) > 0.19.0cvs1.patchset
