@@ -1,3 +1,9 @@
+2008-04-18 [colin]	0.19.0cvs1
+
+	* src/feed.c
+	* src/rssyl.c
+		Use claws_unlink instead of g_unlink
+
 2008-04-18 [paul]	0.19.0
 
 	0.19 released
